--- a/src/styles/IndexPosts.css
+++ b/src/styles/IndexPosts.css
@@ -7,12 +7,13 @@
 }
 
 .Post {
-    margin: 20px 10px 20px;
-    padding: 0px 10px 0px;
     border-radius: 8px;
+    margin: 0.5rem 0px 1rem;
+    padding: 0px 1rem 0px;
+    box-sizing: border-box;
 
     display: flex;
-    width: 100%;
+    width: 100% - 1rem;
 }
 
 .Post .PostText {
@@ -29,8 +30,41 @@
 }
 
 .Post p {
-    color: #66747b;
+    color: var(--secondary-text);
 }
+
+.Post .academicCategory, .Post .adviceCategory, .Post .accomodationCategory, .Post .courseCategory, .Post .miscellaneousCategory {
+    display: inline-block;
+    padding: 0.5rem;
+    border-radius: 20px;
+}
+
+.Post .academicCategory {
+    border: 1px solid var(--cat-1);
+    color: var(--cat-1);
+}
+
+.Post .adviceCategory {
+    border: 1px solid var(--cat-2);
+    color: var(--cat-2);
+}
+
+.Post .accomodationCategory {
+    border: 1px solid var(--cat-3);
+    color: var(--cat-3);
+}
+
+.Post .courseCategory {
+    border: 1px solid var(--cat-4);
+    color: var(--cat-4);
+}
+
+.Post .miscellaneousCategory {
+    border: 1px solid var(--cat-5);
+    color: var(--cat-5);
+}
+
+
 
 .SortContainer {
     position: relative;
